fixing nav overlap

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -36,7 +36,8 @@ header {
 nav {
   background-color: #000;
   color: #fff;
-  padding: 2px 10px;
+  padding: 3px 0;
+  width: 100%;
 }
 
 nav a {
